--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -1,27 +1,25 @@
-name: Ruby
+name: CI
 
 on:
   push:
+  pull_request:
     branches:
       - master
-
-  pull_request:
 
 jobs:
   build:
     runs-on: ubuntu-latest
-    name: Ruby ${{ matrix.ruby }}
-    strategy:
-      matrix:
-        ruby:
-          - '2.7.4'
 
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Ruby
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ${{ matrix.ruby }}
-        bundler-cache: true
-    - name: Run the default task
-      run: bundle exec rake
+      - uses: actions/checkout@v2
+
+      - name: Set up Ruby
+        uses: actions/setup-ruby@v1
+        with:
+          ruby-version: '2.7.4'
+
+      - name: Install dependencies
+        run: make install
+
+      - name: Run Rubocop
+        run: make lint
