--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,13 +1,19 @@
 AllCops:
-  TargetRubyVersion: 2.6
+  Exclude:
+    - "**/vendor/**/*"
+    - "**/*.gemspec"
+    - "spec/**"
+  NewCops: enable
+  TargetRubyVersion: 3.0.1
+  SuggestExtensions: false
 
-Style/StringLiterals:
-  Enabled: true
-  EnforcedStyle: double_quotes
+Style/Documentation:
+  Enabled: false
+Metrics/MethodLength:
+  Enabled: false
+Style/AsciiComments:
+  Enabled: false
 
-Style/StringLiteralsInInterpolation:
-  Enabled: true
-  EnforcedStyle: double_quotes
-
-Layout/LineLength:
-  Max: 120
+# NOTE: for rspec tests
+Metrics/BlockLength:
+  IgnoredMethods: ['describe', 'context']
