--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,8 +1,6 @@
 AllCops:
   Exclude:
-    - "**/vendor/**/*"
-    - "**/*.gemspec"
-    - "spec/**"
+    - "*.gemspec"
   NewCops: enable
   TargetRubyVersion: 3.0.2
   SuggestExtensions: false
@@ -13,7 +11,3 @@ Metrics/MethodLength:
   Enabled: false
 Style/AsciiComments:
   Enabled: false
-
-# NOTE: for rspec tests
-Metrics/BlockLength:
-  IgnoredMethods: ['describe', 'context']
